2000-06-22  Chris Rankin  <rankinc@zipworld.com.au>

	* FvwmPager/x_pager.c: revert mini-window size calculation, and
	  put comments in the code to explain original code's reasoning.

2000-06-21  olicha  <olivier.chapuis@free.fr>

	* FvwmScript/Instruction.c:
	* FvwmScript/FvwmScript.1:
	* FvwmScript/scanner.{c,l}:
	* FvwmScript/script.{c,h,y}:
	Added missing GetMinValue and GetMaxValue instruction	

2000-06-20  Mikhael Goikhman  <migo@homemail.com>

	* Enabled locking FvwmTheme config and messages.
	Fixed 'ModuleSynchronous FvwmTheme' dead-lock.

2000-06-20  Chris Rankin  <rankinc@zipworld.com.au>

	* FvwmPager/x_pager.c: tune the mini-window height and width
	  calculations to be identical to their previous values. However,
	  still guarantee that the values are consistent. (I.e. restore
	  the off-by-one error.) 

2000-06-17  Chris Rankin  <rankinc@zipworld.com.au>

	* FvwmPager/x_pager.c: try to fix "variability" in size (width) of
	  small icons in the pager. Calculated mini-window width and height
	  by scaling window width and height. ("edge2 - edge1" has an
	  off-by-one error anyway.) Also do all multiplications before the
	  final division so that inaccuracies of integer divison are not
	  scaled up.

2000-06-15  Happy Hippo

	* FvwmCommand/FvwmComand*: tries /var/tmp then /tmp for pipe location,
	FvwmCommandS checks that pipes are pipes & only accessible by the user.
	* FvwmConsole/FvwmConsole.c: Fixed failure to relay message due to
	some config line not ending in new line. Cleans up socket.

2000-06-15  Mikhael Goikhman  <migo@homemail.com>

	* Temporary disabled locking FvwmTheme config and messages.
	This hanged fvwm.

2000-06-14  Dominik Vogt  <dominik.vogt@gmx.de>

	* FvwmConsole/FvwmConsoleC.c:
	* FvwmButtons/FvwmButtons.c (main):
	(GetPanelGeometry):
	(main):
	-pedantic fixes

2000-06-14  Hippo

	* FvwmTheme/FvwmTheme.c: config lines and messages are synchronous.
	It's now possible to change a colorset and get values via $[shadow.cs5]
